--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,3 +110,4 @@ en:
     index_category: "Index Category"
     index_word: "Index Word"
     new_word: "New Word"
+  fels: "Fels 169 Framgia E Learning System"
